Finish footer mobile

--- a/index.html
+++ b/index.html
@@ -364,50 +364,75 @@
         <img src="assets/img/brand/imgbrand6.png" alt="">
       </div>
     </section>
-    <!-- Footer  Virginie-->
+
+    <!-- Footer -->
+
     <footer class="footer">
         <img class="footer__logo" src="assets/img/logo/logo2.png" alt="logo">
         <div class="footer__grid">
-            <nav class="footer__wrapNav">
+            <nav class="footer__wrapNav aboutFooter">
                 <h3 class="footer__nav__heading">About</h3>
                 <ul class="footer__nav__list">
-                    <li class="footer__nav_item"><a href="" class="footer__nav__item__anchor">Home</a></li>
-                    <li class="footer__nav_item"><a href="" class="footer__nav__item__anchor">Our Story</a></li>
-                    <li class="footer__nav_item"><a href="" class="footer__nav__item__anchor">The Setting</a></li>
-                    <li class="footer__nav_item"><a href="" class="footer__nav__item__anchor">The Suites</a></li>
-                    <li class="footer__nav_item"><a href="" class="footer__nav__item__anchor">Food Lists</a></li>
+                    <li class="footer__nav__item"><a href="" class="footer__nav__item__anchor">Home</a></li>
+                    <li class="footer__nav__item"><a href="" class="footer__nav__item__anchor">Our Story</a></li>
+                    <li class="footer__nav__item"><a href="" class="footer__nav__item__anchor">The Setting</a></li>
+                    <li class="footer__nav__item"><a href="" class="footer__nav__item__anchor">The Suites</a></li>
+                    <li class="footer__nav__item"><a href="" class="footer__nav__item__anchor">Food Lists</a></li>
                 </ul>
             </nav>
-            <nav class="footer__wrapNav">
+            <nav class="footer__wrapNav facilities">
                 <h3 class="footer__nav__heading">Facilities</h3>
                 <ul class="footer__nav__list">
-                    <li class="footer__nav_item"><a href="" class="footer__nav__item__anchor">The Fontus Spa</a></li>
-                    <li class="footer__nav_item"><a href="" class="footer__nav__item__anchor">Experiences</a></li>
-                    <li class="footer__nav_item"><a href="" class="footer__nav__item__anchor">Private Functions</a></li>
-                    <li class="footer__nav_item"><a href="" class="footer__nav__item__anchor">Gallery, Events</a></li>
-                    <li class="footer__nav_item"><a href="" class="footer__nav__item__anchor">Special Offers</a></li>
+                    <li class="footer__nav__item">
+                        <a href="" class="footer__nav__item__anchor">The Fontus Spa</a>
+                    </li>
+                    <li class="footer__nav__item">
+                        <a href="" class="footer__nav__item__anchor">Experiences</a>
+                    </li>
+                    <li class="footer__nav__item">
+                        <a href="" class="footer__nav__item__anchor">Private Functions</a>
+                    </li>
+                    <li class="footer__nav__item">
+                        <a href="" class="footer__nav__item__anchor">Gallery, Events</a>
+                    </li>
+                    <li class="footer__nav__item">
+                        <a href="" class="footer__nav__item__anchor">Special Offers</a>
+                    </li>
                 </ul>
             </nav>
-            <div class="footer__wrapNav footer__newsletters">
+            <div class="footer__wrapNav footer__newsletters newsletter">
                 <h3 class="footer__nav__heading">Newsletters</h3>
                 <p class="footer__nav__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque dolorum id corporis dolor in.</p>
-                <form class="footer__nav_form" action="">
-                    <input class="footer__input" type="text">
+                <form class="footer__nav__form" action="">
+                    <input class="footer__nav__input" type="text" placeholder="Enter Email Adress">
                 </form>
             </div>
-            <address class="footer__wrapNav footer__adress">
+            <address class="footer__wrapNav footer__adress contact">
                 <h3 class="footer__nav__heading">Contact</h3>
                 <ul class="footer__nav__list">
-                    <li class="footer__nav_item"><img src="" alt="" class="footer__nav__icon"><p>56 Main Street, D-Block, 2nd Floor,</p><p>Melbourne, Australia</p></li>
-                    <li class="footer__nav_item"><img src="" alt="" class="footer__nav__icon"><p>support@gmail.com</p></li>
-                    <li class="footer__nav_item"><img src="" alt="" class="footer__nav__icon"><p>+012(345) 67 899</p></li>
-                    <li class="footer__nav_item"><img src="" alt="" class="footer__nav__icon"><p>08 am - 06 pm</p></li>
+                    <li class="footer__nav__item">
+                        <img src="" alt="" class="footer__nav__icon">
+                        <p class="footer__nav__item__p">56 Main Street, D-Block, 2nd Floor,</p>
+                        <p class="footer__nav__item__p">Melbourne, Australia</p>
+                    </li>
+                    <li class="footer__nav__item">
+                        <img src="" alt="" class="footer__nav__icon">
+                        <p>support@gmail.com</p>
+                    </li>
+                    <li class="footer__nav__item">
+                        <img src="" alt="" class="footer__nav__icon">
+                        <p>+012(345) 67 899</p>
+                    </li>
+                    <li class="footer__nav__item">
+                        <img src="" alt="" class="footer__nav__icon">
+                        <p>08 am - 06 pm</p>
+                    </li>
                 </ul>
             </nav>
         </div>
         <footer class="footer__footer">
+            <img class="footer__footer__img"src="assets/img/footer/iconup@2x.png" alt="icon up">
             <p class="footer__footer__copyright">Copyright 2021 The Kababi - Restaurant HTML Template. Designed by <a href="">Themesflat</a></p>
-            <img src="assets/img/footer/iconup@2x.png" alt="icon up">
         </footer>
     </footer>
   </body>
