--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         </div>
       </div>
       <div class="more">
-        <p class="more_infos">view more infos<i class="fa-solid fa-arrow-right"></i></p>
+        <p class="more_infos">view more photos <i class="fa-solid fa-arrow-right"></i></p>
       </div>
     </section>
     <!-- Team -->
@@ -412,20 +412,20 @@
                 <ul class="footer__nav__list">
                     <li class="footer__nav__item">
                         <img src="" alt="" class="footer__nav__icon">
-                        <p class="footer__nav__item__p">56 Main Street, D-Block, 2nd Floor,</p>
+                        <p class="footer__nav__item__p"><i class="fa-solid fa-location-dot"></i> 56 Main Street, D-Block, 2nd Floor,</p>
                         <p class="footer__nav__item__p">Melbourne, Australia</p>
                     </li>
                     <li class="footer__nav__item">
                         <img src="" alt="" class="footer__nav__icon">
-                        <p>support@gmail.com</p>
+                        <p><i class="fa-regular fa-envelope-open"></i> support@gmail.com</p>
                     </li>
                     <li class="footer__nav__item">
                         <img src="" alt="" class="footer__nav__icon">
-                        <p>+012(345) 67 899</p>
+                        <p><i class="fa-solid fa-phone-flip"></i> +012(345) 67 899</p>
                     </li>
                     <li class="footer__nav__item">
                         <img src="" alt="" class="footer__nav__icon">
-                        <p>08 am - 06 pm</p>
+                        <p><i class="fa-regular fa-clock"></i> 08 am - 06 pm</p>
                     </li>
                 </ul>
             </nav>
